[gd_scene load_steps=13 format=2]

[ext_resource path="res://textures/prince2.png" type="Texture" id=1]
[ext_resource path="res://textures/prince4.png" type="Texture" id=2]
[ext_resource path="res://textures/prince1.png" type="Texture" id=3]
[ext_resource path="res://textures/prince3.png" type="Texture" id=4]
[ext_resource path="res://scripts/player_quest.gd" type="Script" id=5]
[ext_resource path="res://textures/prince_walk1.png" type="Texture" id=6]
[ext_resource path="res://textures/prince_walk3.png" type="Texture" id=7]
[ext_resource path="res://textures/prince_walk2.png" type="Texture" id=8]
[ext_resource path="res://main_theme.tres" type="Theme" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.6978, 44.5042 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.0491, 34.6933 )

[node name="player_quest" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="area" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="area"]
shape = SubResource( 3 )

[node name="label1" type="Label" parent="."]
visible = false
margin_left = -120.0
margin_top = -70.0
margin_right = 124.0
margin_bottom = -54.0
theme = ExtResource( 9 )
text = "Нажмите У для использования"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="area" to="." method="_on_area_area_exited"]
